[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meok-ev-recall-transport-mcp"
version = "1.0.2"
description = "EV-recall transport compliance — ADR Class 9 (UN3480/3481/3536/3556/3557/3558), DGSA workflow, thermal-runaway routing, OEM recall protocols. For UK car transporters under ADR 2025 + ZEV Mandate. By MEOK AI Labs."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Nicholas Templeman", email = "nicholas@meok.ai" }]
keywords = ["mcp", "ev-recall", "adr-class-9", "dgsa", "car-transport", "thermal-runaway", "lithium-battery", "un3556", "zev-mandate", "meok"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Office/Business :: Financial",
]
dependencies = ["mcp[cli]>=1.3.0"]

[project.urls]
Homepage = "https://haulage.app"
Repository = "https://github.com/CSOAI-ORG/meok-ev-recall-transport-mcp"

[project.scripts]
meok-ev-recall-transport-mcp = "server:main"

[tool.setuptools]
py-modules = ["server"]
